--- a/views/index.jade
+++ b/views/index.jade
@@ -4,3 +4,5 @@ block content
   h1= title
   p Welcome to #{title}
   a(href='/auth/facebook') Login with Facebook
+  br
+  a(href='/auth/twitter') Login with Twitter
