Added instagram OAuth

--- a/views/index.jade
+++ b/views/index.jade
@@ -8,3 +8,5 @@ block content
   a(href='/auth/twitter') Login with Twitter
   br
   a(href='/auth/Google') Login with Google
+  br
+  a(href='/auth/instagram') Login with Instagram
