--- a/views/index.jade
+++ b/views/index.jade
@@ -10,3 +10,7 @@ block content
   a(href='/auth/Google') Login with Google
   br
   a(href='/auth/instagram') Login with Instagram
+  br
+  a(href='/auth/linkedin') Login with LinkedIn
+  br
+  a(href='/auth/github') Login with Github
